[package]
name = "orbtkastrology"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astrology = "0.1.28"
orbtk = "0.3.1-alpha1"
#resvg = "0.9.0"
nsvg = "0.5.1"
image = "0.19.0"
